[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raid-bench"
dynamic = ["version"]
authors = [
    { name = "Liam Dugan", email = "ldugan@seas.upenn.edu" },
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
]
description = "RAID is the largest and most challenging benchmark for machine-generated text detectors."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "scikit-learn~=1.3.2",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/liamdugan/raid"
"Bug Tracker" = "https://github.com/liamdugan/raid/issues"

[tool.hatch]
# to bump version:
# $ hatch version [major|minor|patch]
version.path = "raid/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["raid"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/leaderboard",
    "/web"
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
known_first_party = ["raid"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
combine_as_imports = true
